// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Car /> renders the <Card /> and toggles the card feature. 1`] = `
<div
  class="card__Group-sc-1tn30zk-2 hFmXEe"
>
  <div
    class="card__Container-sc-1tn30zk-1 gOgbnt"
  >
    <p
      class="card__Title-sc-1tn30zk-0 bRbdZg"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-sc-1tn30zk-5 iRHnBv"
    >
      <div
        class="card__Item-sc-1tn30zk-8 ewxWbU"
        data-testid="tiger-king-item-feature"
      >
        <img
          class="card__Image-sc-1tn30zk-7 bRfifD"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-sc-1tn30zk-6 iUPnT"
        >
          <p
            class="card__SubTitle-sc-1tn30zk-3 cFWzow"
          >
            Tiger King
          </p>
          <p
            class="card__Text-sc-1tn30zk-4 itdKHh"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-sc-1tn30zk-1 gOgbnt"
  >
    <p
      class="card__Title-sc-1tn30zk-0 bRbdZg"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-sc-1tn30zk-5 iRHnBv"
    >
      <div
        class="card__Item-sc-1tn30zk-8 ewxWbU"
        data-testid="juno-item-feature"
      >
        <img
          class="card__Image-sc-1tn30zk-7 bRfifD"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-sc-1tn30zk-6 iUPnT"
        >
          <p
            class="card__SubTitle-sc-1tn30zk-3 cFWzow"
          >
            Juno
          </p>
          <p
            class="card__Text-sc-1tn30zk-4 itdKHh"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
    <div
      class="card__Feature-sc-1tn30zk-10 xTSAq"
      src="/images/series/feel-good/juno/large.jpg"
    >
      <div
        class="card__Content-sc-1tn30zk-13 gCPpmS"
      >
        <p
          class="card__Title-sc-1tn30zk-0 card__FeatureTitle-sc-1tn30zk-11 bRbdZg hEAmVq"
        >
          Juno
        </p>
        <p
          class="card__FeatureText-sc-1tn30zk-9 cqeGym"
        >
          Juno description
        </p>
        <button
          class="card__FeatureClose-sc-1tn30zk-12 fYkBum"
        >
          <img
            alt="Close"
            src="/images/icons/close.png"
          />
        </button>
        <div
          class="card__Group-sc-1tn30zk-2 kUIJyi"
        >
          <div
            class="card__Maturity-sc-1tn30zk-14 cHHXPr"
          >
            PG
          </div>
          <p
            class="card__FeatureText-sc-1tn30zk-9 HCvCA"
            font-weight="bold"
          >
            Feel-good
          </p>
        </div>
        <div
          class="player__Container-sc-1aq7af5-0"
        >
          <button
            class="player__Button-sc-1aq7af5-4 epzRLW"
          >
            Play
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Car /> renders the <Card /> with populated data 1`] = `
<div
  class="card__Group-sc-1tn30zk-2 hFmXEe"
>
  <div
    class="card__Container-sc-1tn30zk-1 gOgbnt"
  >
    <p
      class="card__Title-sc-1tn30zk-0 bRbdZg"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-sc-1tn30zk-5 iRHnBv"
    >
      <div
        class="card__Item-sc-1tn30zk-8 ewxWbU"
      >
        <img
          class="card__Image-sc-1tn30zk-7 bRfifD"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-sc-1tn30zk-6 iUPnT"
        >
          <p
            class="card__SubTitle-sc-1tn30zk-3 cFWzow"
          >
            Tiger King
          </p>
          <p
            class="card__Text-sc-1tn30zk-4 itdKHh"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-sc-1tn30zk-1 gOgbnt"
  >
    <p
      class="card__Title-sc-1tn30zk-0 bRbdZg"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-sc-1tn30zk-5 iRHnBv"
    >
      <div
        class="card__Item-sc-1tn30zk-8 ewxWbU"
      >
        <img
          class="card__Image-sc-1tn30zk-7 bRfifD"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-sc-1tn30zk-6 iUPnT"
        >
          <p
            class="card__SubTitle-sc-1tn30zk-3 cFWzow"
          >
            Juno
          </p>
          <p
            class="card__Text-sc-1tn30zk-4 itdKHh"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
